...
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfL-0X-L2C">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="kzF-NG-NnI"/>
                                        </constraints>
                                        <state key="normal" title="present">
                                            <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <action selector="btnPresent:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OcZ-Kv-0w2"/>
                                        </connections>
                                    </button>
...
